# rndr

./: .gitignore  CMakeLists.txt  README.md  notes.md
.github/workflows/: unit_tests.yml
example/: CMakeLists.txt  example0.cpp
src/: CMakeLists.txt  main.cpp  wgpu_init.cpp  wgpu_init.h
src/jkwgpu/: helpers.cpp  helpers.h  math.h  matrix.h  ops.cpp  ops.h
src/rndr/: CMakeLists.txt  application.cpp  application.h  context.cpp  context.h  gpu.cpp  gpu.h  helpers.cpp  math.h  matrix.h  renderable.cpp  renderable.h  resource_manager.cpp  resource_manager.h
src/rndr/data/: CMakeLists.txt
src/rndr/materials/: CMakeLists.txt  blinn_phong.cpp  blinn_phong.h  material.cpp  material.h
src/rndr/math/: CMakeLists.txt  math.h  matrix.h  ops.cpp  ops.h
src/rndr/resources/: CMakeLists.txt  basic_pipeline.h  material.cpp  material.h  pipeline_base.cpp  pipeline_base.h  renderable_mesh.h  uniform.h
src/rndr/types/: CMakeLists.txt  globals.cpp  globals.h  types.h
src/rndr/utils/: CMakeLists.txt  glfw_helpers.c  glfw_helpers.h  helpers.cpp  helpers.h  obj_parser.h  result.h
src/rtgpu/: CMakeLists.txt  application.cpp  application.h  helpers.cpp  helpers.h  math.h  matrix.h  ops.cpp  ops.h
src/shaders/: test.wgsl
tests/: CMakeLists.txt  test.cpp
tests/loaders/: CMakeLists.txt  obj.cpp
tests/math/: CMakeLists.txt  matrix.tests.cpp
tests/sanity/: CMakeLists.txt  application.tests.cpp  context.tests.cpp
tests/utils/: CMakeLists.txt  result.tests.cpp
